--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -7,9 +7,11 @@
     "@popperjs/core": "^2.9.2",
     "axios": "^1.7.9",
     "bootstrap": "^5.0.2",
+    "html2canvas": "^1.4.1",
     "react": "^17.0.0",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.0",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.4.0",
     "react-toastify": "^7.0.4",
     "react-tooltip": "^5.28.0",
